# ezdl

./: .gitignore  README.md  pyproject.toml
models/gpt2/: config_124M.json
models/gpt2_124M/: config.json  generation_config.json
models/gpt2_355M/: config.json
scripts/: auto_regression_demo.py  count_lines.py  kv_cache_compare.py  train_fashion_mnist_classifier.py  train_gpt2.py  train_linear_model.py
src/ezdl/: __init__.py  trainer.py  trainer_seq2seq.py  training_args.py
src/ezdl/attention/: mask_utils.py
src/ezdl/data/: data_utils.py  demo_instruction.py  the_verdict.py
src/ezdl/models/: activation_func.py  cache_utils.py  configuration_utils.py  loss_utils.py  masking_utils.py  modeling_outputs.py  modeling_utils.py
src/ezdl/scratch/: decoding_strategies.py  linear_model.py  self_attention.py
src/ezdl/tokenizer/: bpe.py
src/mini_transformer/: __init__.py  device_utils.py  plot_utils.py  trainer.py  trainer_seq2seq.py  training_args.py
src/mini_transformer/benchmark/: benchmark_utils.py
src/mini_transformer/data/: data_utils.py  demo_instruction.py  fashion_mnist.py  sms_spam_collection.py  synthetic_data.py  the_verdict.py
src/mini_transformer/models/: activation_func.py  attention_func.py  cache_utils.py  configuration_utils.py  generate_utils.py  loss_utils.py  masking_utils.py  modeling_outputs.py  modeling_utils.py
src/mini_transformer/optimizer/: gredient_descent.py
src/mini_transformer/scratch/: decoding_strategies.py  gpt2_with_dynamic_cache.py  gpt2_with_sliding_window_cache.py  gpt2_without_kv_cache.py  linear_model.py  self_attention.py
src/mini_transformer/tokenizer/: bpe.py  tokenizer_utils.py
src/road2dl/: __init__.py  device_utils.py  protocol.py  trainer.py  trainer_seq2seq.py  training_args.py
src/road2dl/benchmark/: benchmark_utils.py
src/road2dl/data/: fashion_mnist.py  sms_spam_collection.py  the_verdict.py
tests/: test_device_utils.py
tests/data/: test_demo_instruction.py  test_fashion_mnist.py  test_sms_spam_collection.py  test_the_verdict.py
tests/models/: test_gpt2.py  test_llama.py  test_modeling_utils.py
tests/scratch/: test_decoding_strategies.py  test_self_attention.py
tests/tokenizer/: test_bpe_tokenizer.py
tutorial/llm/: 01_preprocessing.ipynb  02_self_attention.ipynb  03_gpt_model.ipynb  04_eval_and_train.ipynb  llm.py
utils/: convert_gpt2_ckpt.py  model_state_dict_keys.txt
(+46 files in other folders)
