[project]
name = "road2dl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
  { name = "Leo", email = "95532869+MorePeanuts@users.noreply.github.com" },
]
requires-python = ">=3.12"
dependencies = [
  "matplotlib>=3.10.6",
  "torch>=2.6.0",
  "torchvision>=0.21.0",
  "tqdm>=4.67.1",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
  { index = "pytorch-cu124", marker = "sys_platform == 'linux'" },
]
torchvision = [
  { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
  { index = "pytorch-cu124", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "pytest>=8.4.2",
]
