[project]
name = "ezdl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
  { name = "Leo", email = "95532869+MorePeanuts@users.noreply.github.com" },
]
requires-python = ">=3.12"
dependencies = [
  "deprecated>=1.2.18",
  "matplotlib>=3.10.6",
  "scikit-learn>=1.7.2",
  "tiktoken>=0.12.0",
  "torch>=2.6.0",
  "torchvision>=0.21.0",
  "tqdm>=4.67.1",
  "typer>=0.20.0",
]

[project.optional-dependencies]
transformers = [
    "datasets>=4.2.0",
    "transformers>=4.57.1",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
  { index = "pytorch-cu", marker = "sys_platform == 'linux'" },
]
torchvision = [
  { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
  { index = "pytorch-cu", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

# Please modify the index of torch for the CUDA version as needed.
[[tool.uv.index]]
name = "pytorch-cu"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "pytest>=8.4.2",
]

[tool.pytest.ini_options]
addopts = "-rP"
